keycloak/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: sso.org
      http:
        paths:
          - path: /
            backend:
              serviceName: keycloak
              servicePort: 8080
